--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-09-23  Frank Lanitz  <frank@frank.uvena.de>
+
+ * de.po: Update of German translation.
+
+
 2010-09-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * de.po: Minor update of German translation.
