Link with X11 if found to fix linking with a recent GNU ld.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5264 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
    Add utils_get_setting() macro for reading a key from a home or
    system keyfile.
    Move GeanyFiletypePrivate to filetypesprivate.h.
+ * src/Makefile.am, src/ui_utils.c, configure.ac, wscript:
+   Link with X11 if found to fix linking with a recent GNU ld.
 
 
 2010-09-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
