Fix passing quoted arguments when using 'Send Selection to'. This means sed 's/\./(dot)/g' now works.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5268 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-10-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/tools.c, doc/geany.txt, doc/geany.html:
+   Fix passing quoted arguments when using 'Send Selection to'. This
+   means sed 's/\./(dot)/g' now works.
+
+
 2010-09-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/utils.h, src/filetypesprivate.h, src/filetypes.c,
