--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
  * src/tools.c, doc/geany.txt, doc/geany.html:
    Fix passing quoted arguments when using 'Send Selection to'. This
    means sed 's/\./(dot)/g' now works.
+ * src/editor.c:
+   Add snippet keybinding support for keys in user snippets.conf (based
+   on patch by Eugene Arshinov, thanks). No docs yet.
 
 
 2010-09-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
