--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-10-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/templates.c:
+   Strip the output of {command: } templates (closes #3079063).
+
+
 2010-10-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/tools.c, doc/geany.txt, doc/geany.html:
