Document hidden msgwin_*_visible preferences.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5273 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
  * src/templates.c:
    Strip the output of {command: } templates (closes #3079063).
+ * doc/geany.txt, doc/geany.html:
+   Document hidden msgwin_*_visible preferences.
 
 
 2010-10-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
