--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,3 @@
-2010-10-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
-
- * src/templates.c:
-   Strip the output of {command: } templates (closes #3079063).
- * doc/geany.txt, doc/geany.html:
-   Document hidden msgwin_*_visible preferences.
-
-
 2010-10-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/tools.c, doc/geany.txt, doc/geany.html:
@@ -14,6 +6,8 @@
  * src/editor.c:
    Add snippet keybinding support for keys in user snippets.conf (based
    on patch by Eugene Arshinov, thanks). No docs yet.
+ * doc/geany.txt, doc/geany.html:
+   Add some subheadings for Snippets section.
 
 
 2010-09-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
