Add snippet keybindings docs.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5276 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
    on patch by Eugene Arshinov, thanks). No docs yet.
  * doc/geany.txt, doc/geany.html:
    Add some subheadings for Snippets section.
+ * doc/geany.txt, doc/geany.html:
+   Add snippet keybindings docs.
 
 
 2010-09-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
