Move foreach_strv to utils.h.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5277 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@
    Add some subheadings for Snippets section.
  * doc/geany.txt, doc/geany.html:
    Add snippet keybindings docs.
+ * src/highlighting.c, src/utils.h:
+   Move foreach_strv to utils.h.
 
 
 2010-09-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
