Read snippet keybindings from system keyfile also. Add keybinding example to default snippet.conf.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5278 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,9 @@
    Add snippet keybindings docs.
  * src/highlighting.c, src/utils.h:
    Move foreach_strv to utils.h.
+ * src/editor.c, data/snippets.conf:
+   Read snippet keybindings from system keyfile also.
+   Add keybinding example to default snippet.conf.
 
 
 2010-09-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
