Don't cache overridden lexer properties. Add foreach_strv() to plugin API. Add utils_strv_join().
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5280 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-10-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/utils.c, src/utils.h, src/highlighting.c, src/editor.c:
+   Don't cache overridden lexer properties.
+   Add foreach_strv() to plugin API.
+   Add utils_strv_join().
+
+
 2010-10-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/tools.c, doc/geany.txt, doc/geany.html:
