Parse property, constructor, destructor as functions (patch by pottersson, thanks - #2992167).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5281 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
    Don't cache overridden lexer properties.
    Add foreach_strv() to plugin API.
    Add utils_strv_join().
+ * tagmanager/basic.c:
+   Parse property, constructor, destructor as functions (patch by
+   pottersson, thanks - #2992167).
 
 
 2010-10-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
