Added Kazakh translation. Thanks to Baurzhan Muftakhidinov
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5282 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-10-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * po/kk.po:
+   Added Kazakh translation. Thanks to Baurzhan Muftakhidinov for
+   providing.
+
+
 2010-10-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/utils.c, src/utils.h, src/highlighting.c, src/editor.c:
