--- a/THANKS
+++ b/THANKS
@@ -115,6 +115,7 @@ Dario Santomarco <dariello(at)yahoo(dot)it> - it
 Tarot Osuji <tarot(at)sdf(dot)lonestar(dot)org> - ja
 Chikahiro Masami <cmasa(dot)z321(at)gmail(dot)com> - ja
 Park Jang-heon <dotkabi(at)gmail(dot)com> - ko
+Baurzhan Muftakhidinov <baurthefirst(at)gmail(dot)com> - kk
 Laurent Hoeltgen <hoeltgman(at)gmail(dot)com> - lb
 Kurt De Bree <kdebree(at)telenet(dot)be> - nl
 Peter Scholtens <<peter(dot)scholtens(at)xs4all(dot)nl> - nl
