--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2010-10-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * kk.po: Added Kazakh translation. Thanks to Baurzhan Muftakhidinov for
+          providing.
+
+
 2010-09-23  Frank Lanitz  <frank@frank.uvena.de>
 
  * de.po: Update of German translation.
@@ -23,7 +29,7 @@
 2010-08-02  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * ru.po: Update of Russian translation. Thanks to Denis Koryavov for
-          for providing.
+          providing.
 
 
 2010-07-07  Frank Lanitz  <frank@frank.uvena.de>
