Fix build with GLib 2.8.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5283 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-10-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/geanywraplabel.c:
+   Fix build with GLib 2.8.
+
+
 2010-10-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * po/kk.po:
