--- a/THANKS
+++ b/THANKS
@@ -84,6 +84,7 @@ Jiří Techet <techet(at)gmail(dot)com> - Various patches
 Erik de Castro Lopo <mle+tools(at)mega-nerd(dot)com> - Various patches
 Thomas Huth <th(dot)huth(at)googlemail(dot)com> - Forth filetype
 Adam Ples <adamples(at)users(dot)sourceforge(dot)net> - Group encodings in open dialog
+Mário Silva <sharelider(at)gmail(dot)com> - Lisp filetype
 
 Translators:
 ------------
