Added missed files to list inside ChangeLog (oops)
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5287 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,7 +15,7 @@
 
 2010-10-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
- * po/kk.po:
+ * po/kk.po, THANKS, src/about.c:
    Added Kazakh translation. Thanks to Baurzhan Muftakhidinov for
    providing.
 
