--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-10-07  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * de.po: Minor update of German translation.
+
+
 2010-10-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * kk.po: Added Kazakh translation. Thanks to Baurzhan Muftakhidinov for
