Ignore D unittest blocks. Parse D template functions with constraints.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5296 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
  * tagmanager/get.c:
    Ignore D /+ +/ comments.
+ * tagmanager/c.c:
+   Ignore D unittest blocks.
+   Parse D template functions with constraints.
 
 
 2010-10-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
