Add 'Insert New Line Before/After Current' keybindings (based on patch by Eugene Arshinov, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5297 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
  * tagmanager/c.c:
    Ignore D unittest blocks.
    Parse D template functions with constraints.
+ * src/keybindings.c, src/keybindings.h, doc/geany.txt, doc/geany.html:
+   Add 'Insert New Line Before/After Current' keybindings (based on
+   patch by Eugene Arshinov, thanks).
 
 
 2010-10-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
