Use secondary text for 'file not found on disk' dialog.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5298 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
  * src/keybindings.c, src/keybindings.h, doc/geany.txt, doc/geany.html:
    Add 'Insert New Line Before/After Current' keybindings (based on
    patch by Eugene Arshinov, thanks).
+ * src/document.c:
+   Use secondary text for 'file not found on disk' dialog.
 
 
 2010-10-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
