Fix off-by-one bug in 'search_mark_all'.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5299 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-10-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/search.c:
+   Fix off-by-one bug in 'search_mark_all'.
+
+
 2010-10-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * tagmanager/get.c:
