Add missing C99 keyword 'restrict' (#3046716). Add missing D1 keywords 'ref' and 'macro'. Add D2 keywords.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5300 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-10-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * data/filetypes.c, data/filetypes.d:
+   Add missing C99 keyword 'restrict' (#3046716).
+   Add missing D1 keywords 'ref' and 'macro'.
+   Add D2 keywords.
+
+
 2010-10-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/search.c:
