--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    Add missing C99 keyword 'restrict' (#3046716).
    Add missing D1 keywords 'ref' and 'macro'.
    Add D2 keywords.
+ * tagmanager/c.c:
+   Parse Vala functions with contracts (#3080232).
 
 
 2010-10-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
