--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
    Add D2 keywords.
  * tagmanager/c.c:
    Parse Vala functions with contracts (#3080232).
+ * src/project.c:
+   Fix saving project indent prefs straight after using project
+   properties.
 
 
 2010-10-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
