--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@
  * src/project.c:
    Fix saving project indent prefs straight after using project
    properties.
+ * src/highlighting.c, src/filetypes.c:
+   Prevent debug message about a missing 'default' named style when
+   using just a user color scheme file.
 
 
 2010-10-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
