Use radio buttons for View->Editor->Color Schemes menu. Don't hide the menu when only the default item is available.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5305 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-10-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/highlighting.c:
+   Use radio buttons for View->Editor->Color Schemes menu.
+   Don't hide the menu when only the default item is available.
+
+
 2010-10-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * data/filetypes.c, data/filetypes.d:
