Add 3 bugs to watch out for.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5306 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/HACKING
+++ b/HACKING
@@ -254,8 +254,11 @@ Bugs to watch out for
 ---------------------
 * Forgetting to check *doc->is_valid* when looping through
   *documents_array* - instead use *foreach_document()*.
+* Inserting fields into structs in the plugin API instead of appending.
 * Not breaking the plugin ABI when necessary.
 * Using an idle callback that doesn't check main_status.quitting.
+* Forgetting CRLF line endings on Windows.
+* Not handling Tabs/Spaces indent mode.
 
 Libraries
 ---------
