Move filetype 'extension' default into data files.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5309 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@
    src/about.c, src/filetypes.c, src/filetypes.h, THANKS,
    data/filetype_extensions.conf, data/filetypes.erlang, wscript:
    Add Erlang filetype (patch by Taylor Venable, thanks).
+ * src/filetypes.c, data/filetypes.*:
+   Move filetype 'extension' default into data files.
 
 
 2010-10-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
