--- a/data/filetypes.docbook
+++ b/data/filetypes.docbook
@@ -42,7 +42,7 @@ fold.html.preprocessor=1
 
 [settings]
 # default extension used when saving files
-#extension=docbook
+extension=docbook
 
 # the following characters are these which a "word" can contains, see documentation
 #wordchars=_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789
