--- a/data/filetypes.latex
+++ b/data/filetypes.latex
@@ -14,7 +14,7 @@ primary=above abovedisplayshortskip abovedisplayskip abovewithdelims accent adjd
 
 [settings]
 # default extension used when saving files
-#extension=tex
+extension=tex
 
 # the following characters are these which a "word" can contains, see documentation
 #wordchars=_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789
