--- a/data/filetypes.po
+++ b/data/filetypes.po
@@ -16,7 +16,7 @@ fuzzy=0xffa500;0xffffff;true;false
 
 [settings]
 # default extension used when saving files
-#extension=po
+extension=po
 
 # the following characters are these which a "word" can contains, see documentation
 #wordchars=_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789
