Remove filetype default extensions from code.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5312 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-10-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/utils.c, src/filetypes.c:
+   Remove filetype default extensions from code.
+
+
 2010-10-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/highlighting.c:
