Allow 'Foo=' in filetype_extensions.conf to remove all patterns.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5313 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
  * src/utils.c, src/filetypes.c:
    Remove filetype default extensions from code.
+ * src/filetypes.c:
+   Allow 'Foo=' in filetype_extensions.conf to remove all patterns.
 
 
 2010-10-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
