Refactor shared code with kb_cell_edited_cb().
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5316 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    Remove filetype default extensions from code.
  * src/filetypes.c:
    Allow 'Foo=' in filetype_extensions.conf to remove all patterns.
+ * src/prefs.c:
+   Refactor shared code with kb_cell_edited_cb().
 
 
 2010-10-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
