Add HTML5 element names (thanks to Ross McKay).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5319 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  * src/prefs.c:
    Fix not changing edited keybindings when cancelling the Preferences
    dialog.
+ * data/filetypes.xml:
+   Add HTML5 element names (thanks to Ross McKay).
 
 
 2010-10-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
