Move HTML automatic <table> tag completion into a 'table' snippet so the user can decide when to use it (patch by Eugene Arshinov, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5320 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-10-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/editor.c, data/snippets.conf:
+   Move HTML automatic <table> tag completion into a 'table' snippet
+   so the user can decide when to use it (patch by Eugene Arshinov,
+   thanks).
+
+
 2010-10-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/prefs.c:
