Add 'Ensure consistent line endings' file saving pref (patch by Manuel Bua, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5321 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@
    Move HTML automatic <table> tag completion into a 'table' snippet
    so the user can decide when to use it (patch by Eugene Arshinov,
    thanks).
+ * src/interface.c, src/prefs.c, src/about.c, src/keyfile.c,
+   src/document.c, src/document.h, THANKS, geany.glade:
+   Add 'Ensure consistent line endings' file saving pref (patch by
+   Manuel Bua, thanks).
 
 
 2010-10-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
