Auto-indent after an HTML/XML line with a missing closing tag (patch by Eugene Arshinov, thanks). Behaviour only applies if XML tag autoclosing is off.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5322 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,10 @@
    src/document.c, src/document.h, THANKS, geany.glade:
    Add 'Ensure consistent line endings' file saving pref (patch by
    Manuel Bua, thanks).
+ * src/utils.c, src/utils.h, src/editor.c:
+   Auto-indent after an HTML/XML line with a missing closing tag (patch
+   by Eugene Arshinov, thanks).
+   Behaviour only applies if XML tag autoclosing is off.
 
 
 2010-10-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
