Remove unnecessary uses of FILETYPE_ID() macro with GeanyDocument::file_type.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5323 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,10 @@
    Auto-indent after an HTML/XML line with a missing closing tag (patch
    by Eugene Arshinov, thanks).
    Behaviour only applies if XML tag autoclosing is off.
+ * src/templates.c, src/build.c, src/document.c, src/editor.c,
+   src/symbols.c, plugins/saveactions.c:
+   Remove unnecessary uses of FILETYPE_ID() macro with
+   GeanyDocument::file_type.
 
 
 2010-10-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
