Add HTML5 attributes (thanks to Ross McKay).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5324 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,8 @@
    src/symbols.c, plugins/saveactions.c:
    Remove unnecessary uses of FILETYPE_ID() macro with
    GeanyDocument::file_type.
+ * data/filetypes.xml:
+   Add HTML5 attributes (thanks to Ross McKay).
 
 
 2010-10-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
