Add docs for 'Ensure consistent line endings' pref.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5326 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
  * src/interface.c, doc/geany.txt, doc/geany.html, geany.glade:
    Edit XML tag autocompletion pref and tooltip to include HTML.
+ * doc/geany.txt, doc/geany.html:
+   Add docs for 'Ensure consistent line endings' pref.
 
 
 2010-10-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
