Sort filetypes_by_title last instead of on insertion to prevent exponential time.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5328 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
    Add docs for 'Ensure consistent line endings' pref.
  * src/keyfile.c:
    Change default for 'Override Geany keybindings' to on.
+ * src/filetypes.c:
+   Sort filetypes_by_title last instead of on insertion to prevent
+   exponential time.
 
 
 2010-10-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
