Fix notebook tab menu icons using theme for "text/plain" filetypes. Make filetype mime_type "text/plain" instead of NULL.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5334 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-10-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/filetypes.c, src/ui_utils.c:
+   Fix notebook tab menu icons using theme for "text/plain" filetypes.
+   Make filetype mime_type "text/plain" instead of NULL.
+
+
 2010-10-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/interface.c, doc/geany.txt, doc/geany.html, geany.glade:
