Move plugin_set_info prototype and parenthesize arguments for PLUGIN_SET_TRANSLATABLE_INFO (based on patch by Colomban Wendling, thanks). Fix putting pointer symbol before name, not after type.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5341 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,11 @@
    Make Python use named styles for color scheme support - use
    alt.conf color scheme if you want the old colors.
    Add named style 'function'.
+ * src/plugindata.h:
+   Move plugin_set_info prototype and parenthesize arguments for
+   PLUGIN_SET_TRANSLATABLE_INFO (based on patch by Colomban Wendling,
+   thanks).
+   Fix putting pointer symbol before name, not after type.
 
 
 2010-10-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
