Add install-data-only target to only install data/* to speed up testing.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5342 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-10-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * Makefile.am:
+   Add install-data-only target to only install data/* to speed up
+   testing.
+
+
 2010-10-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * data/filetypes.xml:
