Fix not autocompleting when breaking lines.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5343 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  * Makefile.am:
    Add install-data-only target to only install data/* to speed up
    testing.
+ * src/editor.c:
+   Fix not autocompleting when breaking lines.
 
 
 2010-10-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
