Update of Swedish translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5346 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-11-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * sv.po: Update of Swedish translation. Thanks to Tony Mattsson.
+
+
 2010-10-31  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * sl.po: Update of Slovenian translation. Patch by Jože Klepec, thanks.
