--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-11-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * data/filetypes.ada: 
+   Fix comments for Ada. Thanks to Jonas Baggett for reporting.
+
+
 2010-10-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * Makefile.am:
