Remove trailing directory separator for app->datadir and app->docdir for consistency with the other directory fields.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5348 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
+2010-11-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/utils.c, src/main.c:
+   Remove trailing directory separator for app->datadir and
+   app->docdir for consistency with the other directory fields.
+
+
 2010-11-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
- * data/filetypes.ada: 
+ * data/filetypes.ada:
    Fix comments for Ada. Thanks to Jonas Baggett for reporting.
 
 
