Detect user and system filetype configuration files as Conf filetype.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5349 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
  * src/utils.c, src/main.c:
    Remove trailing directory separator for app->datadir and
    app->docdir for consistency with the other directory fields.
+ * src/filetypes.c:
+   Detect user and system filetype configuration files as Conf
+   filetype.
 
 
 2010-11-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
