Respect 'Smart' home key for Shift+Home (fixes #3100290).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5350 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
  * src/filetypes.c:
    Detect user and system filetype configuration files as Conf
    filetype.
+ * src/editor.c:
+   Respect 'Smart' home key for Shift+Home (fixes #3100290).
 
 
 2010-11-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
