Only automatically replace characters when the current document is a Markup document.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5353 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
  * src/plugindata.h, src/plugins.c, plugins/geanyfunctions.h:
    Add sci_get_lexer() to plugin API.
+ * plugins/htmlchars.c:
+   Only automatically replace characters when the current document is
+   a Markup document.
 
 
 2010-11-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
