Rename submenu item labels to be more descriptive.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5354 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
  * plugins/htmlchars.c:
    Only automatically replace characters when the current document is
    a Markup document.
+ * plugins/htmlchars.c:
+   Rename submenu item labels to be more descriptive.
 
 
 2010-11-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
