improve line breaking mode
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5356 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ Note: features included in brackets have lower priority.
 
 	Next version or later:
 	o better file template {filename} wildcard replacement +{BASENAME}
+	o improve line breaking mode
 	o print text size/zoom option
 	o documentation: list and explain filetype modes
 	o common default highlighting styles configurable for all
