Use g_file_replace_contents() if available to save documents - this should help workaround bugs in GVFS. Needs testing.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5361 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,10 @@
    Go to Line dialog/field (patch by Dimitar Zhekov, thanks).
  * src/main.c:
    Print "GIO" and "built-in regex" if enabled with --version.
+ * src/document.c:
+   Use g_file_replace_contents() if available to save documents - this
+   should help workaround bugs in GVFS.
+   Needs testing.
 
 
 2010-11-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
