Fix wrongly adding newlines for templates on disk that don't have LF line endings when default line endings are not LF, e.g. Windows.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5362 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,9 @@
    Use g_file_replace_contents() if available to save documents - this
    should help workaround bugs in GVFS.
    Needs testing.
+ * src/templates.c:
+   Fix wrongly adding newlines for templates on disk that don't have
+   LF line endings when default line endings are not LF, e.g. Windows.
 
 
 2010-11-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
