Update of Spanish translation. Thanks to Lucas Vieites for contributing
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5363 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,8 @@
 2010-11-02  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * de.po: Minor update of German translation.
+ * es.po: Update of Spanish translation. Thanks to Lucas Vieites for
+          contributing. 
 
 
 2010-11-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
