--- a/po/sl.po
+++ b/po/sl.po
@@ -3,8 +3,7 @@
 # Copyright (C) 2009 THE Geany's COPYRIGHT HOLDER
 # This file is distributed under the same license as the Geany package.
 #
-# Jože Klepec <joze.klepec@siol.net>, 2009.
-# kde-sl_SI <joze.SPAMMERS.klepec.KEEP.OUT AT siol.NOSPAM.net>, 2010.
+# Jože Klepec <joze.klepec@siol.net>, 2009 - 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: geany 0.19\n"
