Fix resource leak when saving files with GIO (patch by Colomban Wendling, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5367 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@
    src/ui_utils.c:
    Add filetypes_get_display_name() to get translations for filetype
    None.
+ * src/document.c:
+   Fix resource leak when saving files with GIO (patch by Colomban
+   Wendling, thanks).
 
 
 2010-11-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
