--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-11-05  Peter Scholtens  <peter(dot)scholtens(at)xs4all(dot)nl>
+
+ * nl.po: Update of Dutch translation, almost 100% reached.
+
+
 2010-11-04  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * es.po: Update of Spanish translation. Thanks to Lucas Vieites and 
