Make use_safe_file_saving hidden pref apply even when GIO is available, because g_file_replace_contents() doesn't handle disk space exhaustion.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5370 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-11-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/document.c:
+   Make use_safe_file_saving hidden pref apply even when GIO is
+   available, because g_file_replace_contents() doesn't handle disk
+   space exhaustion.
+
+
 2010-11-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/filetypes.c:
