Fix build with GTK 2.12: explicitly include gio.h if GIO is available and to be used regardless of the USE_GIO_FILEMON flag.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5372 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-11-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/document.c:
+   Fix build with GTK 2.12: explicitly include gio.h if GIO
+   is available and to be used regardless of the USE_GIO_FILEMON flag.
+
+
 2010-11-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/document.c:
