Use non-GIO mime-type icon lookup if GIO lookup fails.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5374 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
    is available and to be used regardless of the USE_GIO_FILEMON flag.
  * wscript:
    Fix installation of template files.
+ * src/ui_utils.c:
+   Use non-GIO mime-type icon lookup if GIO lookup fails.
 
 
 2010-11-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
