Allow skipping configure during autogen by setting NOCONFIGURE=1 (thanks to Chow Loong Jin).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5375 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@
    Fix installation of template files.
  * src/ui_utils.c:
    Use non-GIO mime-type icon lookup if GIO lookup fails.
+ * autogen.sh:
+   Allow skipping configure during autogen by setting NOCONFIGURE=1
+   (thanks to Chow Loong Jin).
 
 
 2010-11-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
