Show GIO/built-in regex support in startup debug message as well as for --version.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5378 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,9 @@
    Make use_safe_file_saving hidden pref apply even when GIO is
    available, because g_file_replace_contents() doesn't handle disk
    space exhaustion.
+ * src/main.c:
+   Show GIO/built-in regex support in startup debug message as well as
+   for --version.
 
 
 2010-11-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
