Add docs for the HTMLChars plugin (patch by Frank).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5380 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,8 @@
  * src/main.c:
    Show GIO/built-in regex support in startup debug message as well as
    for --version.
+ * doc/geany.txt, doc/geany.html:
+   Add docs for the HTMLChars plugin (patch by Frank).
 
 
 2010-11-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
