Save build commands for filetype None (patch by Lex, thanks). Make filetypes_get_conf_extension() return "common" for filetype None.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5387 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-11-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/templates.c, src/filetypes.c:
+   Save build commands for filetype None (patch by Lex, thanks).
+   Make filetypes_get_conf_extension() return "common" for filetype
+   None.
+
+
 2010-11-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/editor.c:
