Use LF line endings for templates internally instead of default pref because the default can change. This fixes missing line endings sometimes when changing default setting.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5390 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-11-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/templates.c, src/document.c:
+   Use LF line endings for templates internally instead of default
+   pref because the default can change. This fixes missing line
+   endings sometimes when changing default setting.
+
+
 2010-11-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/templates.c, src/filetypes.c:
