Add xml_indent_tags filetype setting for documents using the HTML/XML lexers (patch by Eugene Arshinov, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5392 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,10 @@
  * src/document.c:
    Fix not reporting an error message when saving a document fails.
    Check result of fclose().
+ * src/filetypesprivate.h, src/filetypes.c, src/editor.c,
+   data/filetypes.xml, data/filetypes.html:
+   Add xml_indent_tags filetype setting for documents using the
+   HTML/XML lexers (patch by Eugene Arshinov, thanks).
 
 
 2010-11-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
