Set errno to 0 before doing disk I/O to prevent confusing error messages on save failure.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5395 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,9 @@
    data/filetypes.xml, data/filetypes.html:
    Add xml_indent_tags filetype setting for documents using the
    HTML/XML lexers (patch by Eugene Arshinov, thanks).
+ * src/document.c:
+   Set errno to 0 before doing disk I/O to prevent confusing error
+   messages on save failure.
 
 
 2010-11-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
