Update changelog (oops)
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5401 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-11-11  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * waf, wscript:
+   Update Waf to version 1.6.1.
+   Update wscript for new Waf version, make it Python 3 compatible.
+
+
 2010-11-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/document.c:
