Update Waf to current SVN version.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5405 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-11-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * waf:
+   Update Waf to current SVN version.
+
+
 2010-11-11  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * waf, wscript:
