Don't use XML tag auto-indentation when '</' is to the right of the cursor; allow auto-indentation when XML tag auto-closing is also enabled.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5406 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-11-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/editor.c, doc/geany.txt, doc/geany.html:
+   Don't use XML tag auto-indentation when '</' is to the right of the
+   cursor; allow auto-indentation when XML tag auto-closing is also
+   enabled.
+
+
 2010-11-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * waf:
