Rename 'Format' section 'Filetype configuration'.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5407 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    Don't use XML tag auto-indentation when '</' is to the right of the
    cursor; allow auto-indentation when XML tag auto-closing is also
    enabled.
+ * doc/geany.txt, doc/geany.html:
+   Rename 'Format' section 'Filetype configuration'.
 
 
 2010-11-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
