--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,14 @@
    the whole paragraph, which could have mixed indentation.
    Fix memory leak and off-by-one bug on first line when using Select
    Paragraph command.
+ * src/utils.c, src/highlighting.c, src/highlighting.h,
+   src/plugindata.h, src/plugins.c, src/editor.c, src/editor.h,
+   plugins/geanyfunctions.h:
+   Add API functions (patch by Eugene Arshinov, thanks):
+   Move editor.c: is_{string,comment,code}_style() functions to
+   highlighting.c, add to API.
+   Add editor_find_snippet(), editor_insert_snippet(),
+   utils_find_open_xml_tag() to API.
 
 
 2010-11-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
