Change 'Non-Filetype Commands' to 'Independent Commands' in the Set Build Commands dialog.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5411 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-11-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/build.c, doc/geany.txt, doc/geany.html:
+   Change 'Non-Filetype Commands' to 'Independent Commands' in the Set
+   Build Commands dialog.
+
+
 2010-11-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/keybindings.c, src/editor.c, src/editor.h:
