--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
  * src/build.c, doc/geany.txt, doc/geany.html:
    Change 'Non-Filetype Commands' to 'Independent Commands' in the Set
    Build Commands dialog.
+ * doc/geany.txt, doc/geany.html:
+   Use 'Filetype build commands' and 'Independent build commands'.
+   Fix saying project *independent* execute can only be set by hand.
 
 
 2010-11-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
