Parse PHP final functions (fixes #3111171).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5417 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
    Don't change default build command entry color when cancelling
    label editing.
    Make dialogs_show_input() return NULL when cancelled.
+ * tagmanager/php.c:
+   Parse PHP final functions (fixes #3111171).
 
 
 2010-11-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
