Add 'instanceif' keyword for PHP (closes #3109330).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5420 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-11-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * data/filetypes.xml:
+   Add 'instanceif' keyword for PHP (closes #3109330).
+
+
 2010-11-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/build.c, src/dialogs.c, src/dialogs.h, src/callbacks.c:
