Add 'Mark All' Search menu command.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5427 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-11-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/interface.c, src/keybindings.c, src/callbacks.c,
+   src/callbacks.h, geany.glade:
+   Add 'Mark All' Search menu command.
+
+
 2010-11-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * doc/geany.txt, doc/geany.html:
