Remove unnecessary 'global' from long line editor pref field names.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5432 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,9 @@
    Add editor_get_prefs() instead of editor_get_long_line_*()
    functions. This general function can be extended to support
    various project and document overrides.
+ * src/keybindings.c, src/project.c, src/prefs.c, src/keyfile.c,
+   src/editor.c, src/editor.h:
+   Remove unnecessary 'global' from long line editor pref field names.
 
 
 2010-11-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
