Add *.latex pattern.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5435 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-11-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * data/filetype_extensions.conf:
+   Add *.latex pattern.
+
+
 2010-11-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/interface.c, src/keybindings.c, src/callbacks.c,
