Update Waf-based build system for Scintilla.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/unstable@5438 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    Update Scintilla to version 2.22.
    Keep Scintilla's directory structure mostly and only
    remove unused lexers.
+ * wscript:
+   Update Waf-based build system for Scintilla.
 
 
 2010-11-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
